overflow fix

--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ input {
     border: none;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     width: 100%;
     overflow-x: hidden;
@@ -1170,8 +1174,9 @@ body {
     }
 
     .header .mobile-nav .right .list {
+        overflow: hidden;
         width: 100%;
-        height: 100vh;
+        height: 110vh;
         background-color: #FAFAFA;
         text-align: left;
         display: flex;
